--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Thiệp mời lễ tốt nghiệp 3D - Hà Vụng Liên" />
+    <title>Thiệp Mời Lễ Tốt Nghiệp - SeeYouThere</title>
   </head>
   <body>
     <div id="root"></div>
